<resources>
    <string name="app_name">Diseasepred</string>
    <string name="symptom_4">Symptom 4</string>
    <string name="symptom_5">Symptom 5</string>
    <string name="symptom_3">Symptom 3</string>
    <string name="symptom_2">Symptom 2</string>
    <string name="symptom_1">Symptom 1</string>
    <string name="predict">predict</string>
    <string name="test">Test</string>
    <string name="disease_prediction">Disease Predictor</string>
</resources>