<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:id="@+id/card1"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="153dp" >

        <TextView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/disease_prediction"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom_1"
            android:layout_marginStart="40dp"
            android:layout_marginTop="115dp" />




        <Spinner
            android:id="@+id/s1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="110dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom_2"
            android:layout_marginStart="40dp"
            android:layout_marginTop="185dp" />

        <Spinner
            android:id="@+id/s2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="178dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom_3"
            android:layout_marginStart="40dp"
            android:layout_marginTop="245dp"
            />

        <Spinner
            android:id="@+id/s3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="238dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom_4"
            android:layout_marginStart="40dp"
            android:layout_marginTop="305dp" />

        <Spinner
            android:id="@+id/s4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="297dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom_5"
            android:layout_marginStart="40dp"
            android:layout_marginTop="365dp" />

        <Spinner
            android:id="@+id/s5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="363dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:id="@+id/predict"
            android:layout_marginHorizontal="20dp"
            android:text="@string/predict"
            />


    </androidx.cardview.widget.CardView>
</LinearLayout>